--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_1/if_pr_04_captage_eau_sousterraine_privee.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_1/if_pr_04_captage_eau_sousterraine_privee.yaml
@@ -1,4 +1,4 @@
-description: Paramètres pour le calcul des Ancrage et/ou mouillage sans droit immobilier
+description: Paramètres pour le calcul des Captage d'eau souterraine pour l'habitation
 part_fixe:
   values:
     2018-01-01: 0
@@ -7,10 +7,10 @@ part_unitaire:
     2018-01-01: 0
 part_variable:
   values:
-    2018-01-01: 150
+    2018-01-01: 2
 montant_minimum:
   values:
     2018-01-01: 0
 base_calcul_jour:
   values:
-    2018-01-01: 1
+    2018-01-01: 360
