--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,7 +49,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     -
       name: remove / in branch name (not master - not tag)
-      uses: mad9000/actions-find-and-replace-string@2
+      uses: mad9000/actions-find-and-replace-string@3
       if: github.event_name == 'push' && github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop' && github.ref != 'refs/tags'
       id: findandreplace
       with:
@@ -96,7 +96,7 @@ jobs:
       name: Extract tag name
       if: github.event_name == 'push' && github.ref == 'refs/tags'
       shell: bash
-      run: echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
+      run: echo "##[name=tag;]$(echo ${GITHUB_REF#refs/tags/} ${GITHUB_OUTPUT})"
       id: extract_tag
     -
       name: Build and push (tags)
