--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,12 +13,12 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container: python:3.7
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v2.3.4
+      uses: actions/checkout@v3.2.0
     -
       name: Dependencies
       run: docker/install_deps --test
@@ -30,14 +30,14 @@ jobs:
       run: make test
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: test
     env:
       repo: "govpf/openfisca-pf"
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v2.3.4
+      uses: actions/checkout@v3.2.0
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1.5.1
