--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,12 +13,12 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container: python:3.7
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v2.3.4
+      uses: actions/checkout@v3.2.0
     -
       name: Dependencies
       run: docker/install_deps --test
@@ -30,14 +30,14 @@ jobs:
       run: make test
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: test
     env:
       repo: "govpf/openfisca-pf"
     steps:
     -
       name: Checkout
-      uses: actions/checkout@v2.3.4
+      uses: actions/checkout@v3.2.0
     -
       name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1.5.1
@@ -49,7 +49,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     -
       name: remove / in branch name (not master - not tag)
-      uses: mad9000/actions-find-and-replace-string@2
+      uses: mad9000/actions-find-and-replace-string@3
       if: github.event_name == 'push' && github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop' && github.ref != 'refs/tags'
       id: findandreplace
       with:
@@ -96,7 +96,7 @@ jobs:
       name: Extract tag name
       if: github.event_name == 'push' && github.ref == 'refs/tags'
       shell: bash
-      run: echo "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/tags/})"
+      run: echo "##[name=tag;]$(echo ${GITHUB_REF#refs/tags/} ${GITHUB_OUTPUT})"
       id: extract_tag
     -
       name: Build and push (tags)
