+fix test runner float32 -> float64 (sed)

--- a/openfisca_pf/tests/dicp/tva/tests_tva.yaml
+++ b/openfisca_pf/tests/dicp/tva/tests_tva.yaml
@@ -1,15 +1,14 @@
 - name: 1
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 0
-      base_imposable_tva_taux_normal: 0
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 12268769
-      tva_autres_biens_deductibles: 0
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 113410668
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 0
+    base_imposable_tva_taux_normal: 0
+    regularisation_autre_tva_exigible: 0
+    tva_immobilisation_deductible: 12268769
+    tva_autres_biens_deductibles: 0
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 113410668
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 0
@@ -21,15 +20,14 @@
 - name: 2
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 30274587
-      base_imposable_tva_taux_intermediaire: 4246912
-      base_imposable_tva_taux_normal: 203200
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 342749
-      tva_autres_biens_deductibles: 54221142
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 6390639
+    base_imposable_tva_taux_reduit: 30274587
+    base_imposable_tva_taux_intermediaire: 4246912
+    base_imposable_tva_taux_normal: 203200
+    regularisation_autre_tva_exigible: 0
+    tva_immobilisation_deductible: 342749
+    tva_autres_biens_deductibles: 54221142
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 6390639
   output:
     tva_due_taux_reduit: 1513729
     tva_due_taux_intermediaire: 552099
@@ -41,15 +39,14 @@
 - name: 3
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 20988260
-      base_imposable_tva_taux_intermediaire: 6180360
-      base_imposable_tva_taux_normal: 0
-      regularisation_autre_tva_exigible: 1905
-      tva_immobilisation_deductible: 1147017
-      tva_autres_biens_deductibles: 4448758
-      regularisation_tva_deductible: 42227147
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 20988260
+    base_imposable_tva_taux_intermediaire: 6180360
+    base_imposable_tva_taux_normal: 0
+    regularisation_autre_tva_exigible: 1905
+    tva_immobilisation_deductible: 1147017
+    tva_autres_biens_deductibles: 4448758
+    regularisation_tva_deductible: 42227147
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 1049413
     tva_due_taux_intermediaire: 803447
@@ -61,15 +58,14 @@
 - name: 4
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 604139600
-      base_imposable_tva_taux_intermediaire: 24816469
-      base_imposable_tva_taux_normal: 336000
-      regularisation_autre_tva_exigible: 1925268
-      tva_immobilisation_deductible: 2154292
-      tva_autres_biens_deductibles: 35442393
-      regularisation_tva_deductible: 2999310
-      report_credit_tva_deductible: 27145943
+    base_imposable_tva_taux_reduit: 604139600
+    base_imposable_tva_taux_intermediaire: 24816469
+    base_imposable_tva_taux_normal: 336000
+    regularisation_autre_tva_exigible: 1925268
+    tva_immobilisation_deductible: 2154292
+    tva_autres_biens_deductibles: 35442393
+    regularisation_tva_deductible: 2999310
+    report_credit_tva_deductible: 27145943
   output:
     tva_due_taux_reduit: 30206980
     tva_due_taux_intermediaire: 3226141
@@ -81,35 +77,33 @@
 - name: 5
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 58689748
-      base_imposable_tva_taux_intermediaire: 8905799
-      base_imposable_tva_taux_normal: 137211
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 81398
-      tva_autres_biens_deductibles: 9958961
-      regularisation_tva_deductible: 5014
-      report_credit_tva_deductible: 16664524
+    base_imposable_tva_taux_reduit: 58689748.0
+    base_imposable_tva_taux_intermediaire: 8905799.0
+    base_imposable_tva_taux_normal: 137211.0
+    regularisation_autre_tva_exigible: 0.0
+    tva_immobilisation_deductible: 81398.0
+    tva_autres_biens_deductibles: 9958961.0
+    regularisation_tva_deductible: 5014.0
+    report_credit_tva_deductible: 16664524.0
   output:
-    tva_due_taux_reduit: 2934487
-    tva_due_taux_intermediaire: 1157754
-    tva_due_taux_normal: 21954
-    tva_exigible: 4114195
-    tva_deductible: 26709896
-    tva_nette_due: 0
-    credit_tva: 22595702
+    tva_due_taux_reduit: 2934487.0
+    tva_due_taux_intermediaire: 1157754.0
+    tva_due_taux_normal: 21954.0
+    tva_exigible: 4114195.0
+    tva_deductible: 26709897.0
+    tva_nette_due: 0.0
+    credit_tva: 22595702.0
 - name: 6
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 0
-      base_imposable_tva_taux_normal: 0
-      regularisation_autre_tva_exigible: 491400
-      tva_immobilisation_deductible: 0
-      tva_autres_biens_deductibles: 12551740
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 8270518
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 0
+    base_imposable_tva_taux_normal: 0
+    regularisation_autre_tva_exigible: 491400
+    tva_immobilisation_deductible: 0
+    tva_autres_biens_deductibles: 12551740
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 8270518
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 0
@@ -121,15 +115,14 @@
 - name: 7
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 0
-      base_imposable_tva_taux_normal: 17088189
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 0
-      tva_autres_biens_deductibles: 10043249
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 6284198
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 0
+    base_imposable_tva_taux_normal: 17088189
+    regularisation_autre_tva_exigible: 0
+    tva_immobilisation_deductible: 0
+    tva_autres_biens_deductibles: 10043249
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 6284198
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 0
@@ -141,15 +134,14 @@
 - name: 8
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 73477031
-      base_imposable_tva_taux_normal: 2282035
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 16106308
-      tva_autres_biens_deductibles: 4746214
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 73477031
+    base_imposable_tva_taux_normal: 2282035
+    regularisation_autre_tva_exigible: 0
+    tva_immobilisation_deductible: 16106308
+    tva_autres_biens_deductibles: 4746214
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 9552014
@@ -161,15 +153,14 @@
 - name: 9
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 10545177
-      base_imposable_tva_taux_normal: 0
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 0
-      tva_autres_biens_deductibles: 1367483
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 1960041
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 10545177
+    base_imposable_tva_taux_normal: 0
+    regularisation_autre_tva_exigible: 0
+    tva_immobilisation_deductible: 0
+    tva_autres_biens_deductibles: 1367483
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 1960041
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 1370873
@@ -181,15 +172,14 @@
 - name: 10
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 446621791
-      base_imposable_tva_taux_normal: 126858062
-      regularisation_autre_tva_exigible: 3834797
-      tva_immobilisation_deductible: 0
-      tva_autres_biens_deductibles: 1083592
-      regularisation_tva_deductible: 3834797
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 446621791
+    base_imposable_tva_taux_normal: 126858062
+    regularisation_autre_tva_exigible: 3834797
+    tva_immobilisation_deductible: 0
+    tva_autres_biens_deductibles: 1083592
+    regularisation_tva_deductible: 3834797
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 58060833
@@ -201,15 +191,14 @@
 - name: 11
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 1313469600
-      base_imposable_tva_taux_intermediaire: 15725185
-      base_imposable_tva_taux_normal: 425119
-      regularisation_autre_tva_exigible: 8952995
-      tva_immobilisation_deductible: 2764073
-      tva_autres_biens_deductibles: 21708393
-      regularisation_tva_deductible: 4731623
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 1313469600
+    base_imposable_tva_taux_intermediaire: 15725185
+    base_imposable_tva_taux_normal: 425119
+    regularisation_autre_tva_exigible: 8952995
+    tva_immobilisation_deductible: 2764073
+    tva_autres_biens_deductibles: 21708393
+    regularisation_tva_deductible: 4731623
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 65673480
     tva_due_taux_intermediaire: 2044274
@@ -221,15 +210,14 @@
 - name: 12
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 28740
-      base_imposable_tva_taux_intermediaire: 524709269
-      base_imposable_tva_taux_normal: 11435494
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 211605
-      tva_autres_biens_deductibles: 23794265
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 28740
+    base_imposable_tva_taux_intermediaire: 524709269
+    base_imposable_tva_taux_normal: 11435494
+    regularisation_autre_tva_exigible: 0
+    tva_immobilisation_deductible: 211605
+    tva_autres_biens_deductibles: 23794265
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 1437
     tva_due_taux_intermediaire: 68212205
@@ -241,15 +229,14 @@
 - name: 13
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 0
-      base_imposable_tva_taux_normal: 51463
-      regularisation_autre_tva_exigible: 18296332
-      tva_immobilisation_deductible: 12784
-      tva_autres_biens_deductibles: 2600693
-      regularisation_tva_deductible: 68
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 0
+    base_imposable_tva_taux_normal: 51463
+    regularisation_autre_tva_exigible: 18296332
+    tva_immobilisation_deductible: 12784
+    tva_autres_biens_deductibles: 2600693
+    regularisation_tva_deductible: 68
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 0
@@ -261,15 +248,14 @@
 - name: 14
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 74225785
-      base_imposable_tva_taux_normal: 0
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 0
-      tva_autres_biens_deductibles: 20184
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 74225785
+    base_imposable_tva_taux_normal: 0
+    regularisation_autre_tva_exigible: 0
+    tva_immobilisation_deductible: 0
+    tva_autres_biens_deductibles: 20184
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 9649352
@@ -281,15 +267,14 @@
 - name: 15
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 31921123
-      base_imposable_tva_taux_normal: 21394906
-      regularisation_autre_tva_exigible: 140588
-      tva_immobilisation_deductible: 0
-      tva_autres_biens_deductibles: 4017561
-      regularisation_tva_deductible: 0
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 31921123
+    base_imposable_tva_taux_normal: 21394906
+    regularisation_autre_tva_exigible: 140588
+    tva_immobilisation_deductible: 0
+    tva_autres_biens_deductibles: 4017561
+    regularisation_tva_deductible: 0
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 4149746
@@ -301,15 +286,14 @@
 - name: 16
   period: 2020-01
   input:
-    personne:
-      base_imposable_tva_taux_reduit: 0
-      base_imposable_tva_taux_intermediaire: 15379583
-      base_imposable_tva_taux_normal: 142728
-      regularisation_autre_tva_exigible: 0
-      tva_immobilisation_deductible: 0
-      tva_autres_biens_deductibles: 0
-      regularisation_tva_deductible: 459616
-      report_credit_tva_deductible: 0
+    base_imposable_tva_taux_reduit: 0
+    base_imposable_tva_taux_intermediaire: 15379583
+    base_imposable_tva_taux_normal: 142728
+    regularisation_autre_tva_exigible: 0
+    tva_immobilisation_deductible: 0
+    tva_autres_biens_deductibles: 0
+    regularisation_tva_deductible: 459616
+    report_credit_tva_deductible: 0
   output:
     tva_due_taux_reduit: 0
     tva_due_taux_intermediaire: 1999346
