--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -63,7 +63,7 @@ jobs:
       name: Extract tag name
       if: startsWith(github.ref, 'refs/tags/')
       shell: bash
-      run: echo "tag=${GITHUB_REF/refs\/tags\//}" >> ${{ env.GITHUB_ACTION_PATH }}/
+      run: echo "tag=${GITHUB_REF/refs\/tags\//}" >> ${{ env.GITHUB_ACTION_PATH }}/GITHUB_OUTPUT
       id: extract_tag
     -
       name: Build and push (tags)
