--- a/openfisca_pf/parameters/dicp/tva/seuils/montant_minimum_de_credit_de_tva_par_mois.yaml
+++ b/openfisca_pf/parameters/dicp/tva/seuils/montant_minimum_de_credit_de_tva_par_mois.yaml
@@ -1,27 +1,27 @@
 description: Montant requis au mois de la déclaration nécésaire pour prétendre à un remboursement de crédit de TVA.
 metadata:
   reference: https://www.impot-polynesie.gov.pf/code/4-section-iv-remboursement-de-credit-de-taxe-deductible
-1:
-  1995-02-02: 0
-2:
-  1995-02-02: 0
-3:
+"01":
+  1995-02-02: null
+"02":
+  1995-02-02: null
+"03":
   1995-02-02: 100_000
-4:
-  1995-02-02: 0
-5:
-  1995-02-02: 0
-6:
+"04":
+  1995-02-02: null
+"05":
+  1995-02-02: null
+"06":
   1995-02-02: 100_000
-7:
-  1995-02-02: 0
-8:
-  1995-02-02: 0
-9:
+"07":
+  1995-02-02: null
+"08":
+  1995-02-02: null
+"09":
   1995-02-02: 100_000
-10:
-  1995-02-02: 0
-11:
-  1995-02-02: 0
-12:
+"10":
+  1995-02-02: null
+"11":
+  1995-02-02: null
+"12":
   1995-02-02: 20_000
