Revert "feature/mdrp_28_rctva (#93)"
This reverts commit 058a9bc1930147da93c833b06be69250373d46c6.

--- a/openfisca_pf/parameters/dicp/tva/taux.yaml
+++ b/openfisca_pf/parameters/dicp/tva/taux.yaml
@@ -1,6 +1,6 @@
 description: Taux de TVA
 metadata:
-  reference: https://www.impot-polynesie.gov.pf/code/3-chap-iii-taux
+  reference: https://law.gov.example/basic-income/amount
 reduit:
   description: Taux réduit de TVA
   values:
