--- a/openfisca_pf/parameters/dicp/impot_foncier/taux_valeur_venal_direct.yaml
+++ b/openfisca_pf/parameters/dicp/impot_foncier/taux_valeur_venal_direct.yaml
@@ -8,11 +8,6 @@ AUSTRALES:
     2021-12-27:
       value: 0.02
 
-GAMBIERS:
-  values:
-    2021-12-27:
-      value: 0.02
-
 ILES_DU_VENT:
   values:
     2021-12-27:
@@ -28,7 +23,7 @@ MARQUISES:
     2021-12-27:
       value: 0.02
 
-TUAMOTUS:
+TUAMOTUS_ET_GAMBIERS:
   values:
     2021-12-27:
       value: 0.02
