renamed some variables and parameters added variable for air bnb discount

--- a/openfisca_pf/parameters/dicp/impot_foncier/taux_archipel.yaml
+++ b/openfisca_pf/parameters/dicp/impot_foncier/taux_archipel.yaml
@@ -8,6 +8,11 @@ AUSTRALES:
     2021-12-27:
       value: 0.02
 
+GAMBIERS:
+  values:
+    2021-12-27:
+      value: 0.02
+
 ILES_DU_VENT:
   values:
     2021-12-27:
@@ -23,7 +28,7 @@ MARQUISES:
     2021-12-27:
       value: 0.02
 
-TUAMOTUS_ET_GAMBIERS:
+TUAMOTUS:
   values:
     2021-12-27:
       value: 0.02
