--- a/openfisca_pf/parameters/dicp/impot_foncier/degrevement.yaml
+++ b/openfisca_pf/parameters/dicp/impot_foncier/degrevement.yaml
@@ -1,4 +1,4 @@
-base_seule:
+premier_degrevement:
   description: "Premier dégrèvement appliqué à la valeur locative pour calculer la base imposable de l'impôt foncier"
   metadata:
     type: float
@@ -7,7 +7,16 @@ base_seule:
     2021-12-27:
       value: 0.25
 
-base_meuble:
+second_degrevement_si_non_loue:
+  description: "Second dégrèvement appliqué pour calculer la base imposable de l'impôt foncier si le local n'est pas loué"
+  metadata:
+    type: float
+    unit: /1
+  values:
+    2021-12-27:
+      value: 0
+
+second_degrevement_si_loue_meuble:
   description: "Second dégrèvement appliqué pour calculer la base imposable de l'impôt foncier si le local est loué en meublé"
   metadata:
     type: float
@@ -16,7 +25,7 @@ base_meuble:
     2021-12-27:
       value: 0.30
 
-base_non_meuble:
+second_degrevement_si_loue_non_meuble:
   description: "Second dégrèvement appliqué pour calculer la base imposable de l'impôt foncier si le local est loué en non-meublé"
   metadata:
     type: float
