--- a/openfisca_pf/parameters/dicp/impot_foncier/degrevement.yaml
+++ b/openfisca_pf/parameters/dicp/impot_foncier/degrevement.yaml
@@ -33,3 +33,12 @@ second_degrevement_si_loue_non_meuble:
   values:
     2021-12-27:
       value: 0.25
+
+degrevement_pour_baisse_de_revenus_loue_en_meuble_de_tourisme:
+  description: "Dégrèvement sur demande dans le cas d'une baisse de revenus d'un local loué en meublé de tourisme"
+  metadata:
+    type: float
+    unit: /1
+  values:
+    2021-12-27:
+      value: 0.5
