passage de la CPS à 0

--- a/openfisca_pf/parameters/dicp/cps/taux.yaml
+++ b/openfisca_pf/parameters/dicp/cps/taux.yaml
@@ -3,3 +3,4 @@ reference: https://www.impot-polynesie.gov.pf/code/5-titre-v-contribution-pour-l
 values:
   2000-11-01: 0
   2022-04-01: 0.01
+  2023-10-01: null
