--- a/openfisca_pf/tests/dicp/tva/tests_credit_tva.yaml
+++ b/openfisca_pf/tests/dicp/tva/tests_credit_tva.yaml
@@ -1,5 +1,5 @@
 - name: "1"
-  period: 2023-06
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 1000000
     base_imposable_tva_taux_intermediaire: 1000000
@@ -37,8 +37,8 @@
     cps_nette: 30000
     cps_nette_due: 30000
     cps_a_reporter: 0
-- name: "crédit de TVA 1 +RBT passant"
-  period: 2023-12
+- name: "crédit de tva 1 et remboursement passant"
+  period: 2022-12
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 0
@@ -76,8 +76,8 @@
     cps_nette: -100
     cps_nette_due: 0
     cps_a_reporter: 100
-- name: "crédit de TVA 2 +rbt passant"
-  period: 2023-03
+- name: "crédit de tva 2 et remboursement passant"
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 30274587
     base_imposable_tva_taux_intermediaire: 4246912
@@ -115,8 +115,8 @@
     cps_nette: 347347
     cps_nette_due: 347347
     cps_a_reporter: 0
-- name: "crédit de TVA 3+rbt non passant rib"
-  period: 2023-03
+- name: "crédit de TVA 3 et remboursement non passant rib"
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 20988260
     base_imposable_tva_taux_intermediaire: 6180360
@@ -154,8 +154,8 @@
     cps_nette: 271686
     cps_nette_due: 271686
     cps_a_reporter: 0
-- name: "crédit de TVA 4+rbt non passant periode "
-  period: 2023-01
+- name: "crédit de TVA 4 et remboursement non passant periode "
+  period: 2022-07
   input:
     base_imposable_tva_taux_reduit: 604139600
     base_imposable_tva_taux_intermediaire: 24816469
@@ -194,7 +194,7 @@
     cps_nette_due: 6292921
     cps_a_reporter: 0
 - name: "crédit de TVA 5"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 58689748
     base_imposable_tva_taux_intermediaire: 8905799
@@ -232,8 +232,8 @@
     cps_nette: 677328
     cps_nette_due: 677328
     cps_a_reporter: 0
-- name: "crédit de TVA 6+rbt non passant montant septembre"
-  period: 2023-09
+- name: "crédit de TVA 6 et remboursement non passant montant septembre"
+  period: 2022-09
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 0
@@ -271,8 +271,8 @@
     cps_nette: 0
     cps_nette_due: 0
     cps_a_reporter: 0
-- name: "crédit de TVA 7+rbt non passant montant demandé"
-  period: 2023-03
+- name: "crédit de TVA 7 et remboursement non passant montant demandé"
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 0
@@ -310,8 +310,8 @@
     cps_nette: 170882
     cps_nette_due: 170882
     cps_a_reporter: 0
-- name: "crédit de TVA 8"
-  period: 2023-03
+- name: "crédit de tva 8"
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 73477031
@@ -349,8 +349,8 @@
     cps_nette: 757591
     cps_nette_due: 757591
     cps_a_reporter: 0
-- name: "credit TVA inf 100000 +rbt non passant montant decembre"
-  period: 2023-12
+- name: "credit tva inferieur à 100000 et remboursement non passant montant decembre"
+  period: 2022-12
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 758585
@@ -389,7 +389,7 @@
     cps_nette_due: 7586
     cps_a_reporter: 0
 - name: "TVA nette due 1"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 10545177
@@ -428,7 +428,7 @@
     cps_nette_due: 105452
     cps_a_reporter: 0
 - name: "TVA nette due 2"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 446621791
@@ -467,7 +467,7 @@
     cps_nette_due: 5734799
     cps_a_reporter: 0
 - name: "TVA nette due 3"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 1313469600
     base_imposable_tva_taux_intermediaire: 15725185
@@ -506,7 +506,7 @@
     cps_nette_due: 13296199
     cps_a_reporter: 0
 - name: "TVA nette due 4"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 28740
     base_imposable_tva_taux_intermediaire: 524709269
@@ -545,7 +545,7 @@
     cps_nette_due: 5361735
     cps_a_reporter: 0
 - name: "TVA nette due 5"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 0
@@ -584,7 +584,7 @@
     cps_nette_due: 515
     cps_a_reporter: 0
 - name: "TVA nette due 6"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 74225785
@@ -623,7 +623,7 @@
     cps_nette_due: 742258
     cps_a_reporter: 0
 - name: "TVA nette due 7"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 31921123
@@ -662,7 +662,7 @@
     cps_nette_due: 533160
     cps_a_reporter: 0
 - name: "TVA nette due 8"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 15379583
@@ -701,7 +701,7 @@
     cps_nette_due: 155223
     cps_a_reporter: 0
 - name: "TVA  néante 1"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 100000
     base_imposable_tva_taux_intermediaire: 0
@@ -740,7 +740,7 @@
     cps_nette_due: 1000
     cps_a_reporter: 0
 - name: "TVA  néante 2"
-  period: 2023-03
+  period: 2022-03
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 0
@@ -778,8 +778,8 @@
     cps_nette: 0
     cps_nette_due: 0
     cps_a_reporter: 0
-- name: "arrondis +"
-  period: 2023-03
+- name: "arrondis superieur"
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 150
     base_imposable_tva_taux_intermediaire: 104
@@ -817,8 +817,8 @@
     cps_nette: 13
     cps_nette_due: 13
     cps_a_reporter: 0
-- name: "arrondis -"
-  period: 2023-03
+- name: "arrondis inferieur"
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 149
     base_imposable_tva_taux_intermediaire: 103
@@ -857,7 +857,7 @@
     cps_nette_due: 13
     cps_a_reporter: 0
 - name: "regle RBT mois non passant"
-  period: 2023-02
+  period: 2022-07
   input:
     base_imposable_tva_taux_reduit: 100000
     base_imposable_tva_taux_intermediaire: 100000
@@ -896,7 +896,7 @@
     cps_nette_due: 3000
     cps_a_reporter: 0
 - name: "RBT sept"
-  period: 2023-09
+  period: 2022-09
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 0
@@ -935,7 +935,7 @@
     cps_nette_due: 0
     cps_a_reporter: 0
 - name: "crédit de TVA inf seuil dec"
-  period: 2023-12
+  period: 2022-12
   input:
     base_imposable_tva_taux_reduit: 0
     base_imposable_tva_taux_intermediaire: 0
@@ -974,7 +974,7 @@
     cps_nette_due: 0
     cps_a_reporter: 100
 - name: "crédit de TVA inf seuil"
-  period: 2023-03
+  period: 2022-06
   input:
     base_imposable_tva_taux_reduit: 20988260
     base_imposable_tva_taux_intermediaire: 6180360
