--- a/openfisca_pf/tests/dicp/cps/tests_cps.yaml
+++ b/openfisca_pf/tests/dicp/cps/tests_cps.yaml
@@ -1,4 +1,4 @@
-- name: 1
+- name: 'CPS égale à 0'
   period: 2022-05
   input:
    base_imposable_cps: 0
@@ -8,7 +8,7 @@
     cps_due: 0
     cps_nette_due: 0
     cps_a_reporter: 0
-- name: 2
+- name: 'CPS'
   period: 2022-05
   input:
     base_imposable_cps: 1000000
@@ -18,7 +18,7 @@
     cps_due: 10000
     cps_nette_due: 10000
     cps_a_reporter: 0
-- name: 3
+- name: 'CPS avec CPS à reverser'
   period: 2022-05
   input:
     base_imposable_cps: 1000000
@@ -28,7 +28,7 @@
     cps_due: 10000
     cps_nette_due: 60000
     cps_a_reporter: 0
-- name: 4
+- name: 'CPS avec CPS en diminution'
   period: 2022-05
   input:
     base_imposable_cps: 1000000
@@ -38,7 +38,7 @@
     cps_due: 10000
     cps_nette_due: 0
     cps_a_reporter: 40000
-- name: 5
+- name: 'CPS avec CPS en diminution'
   period: 2022-05
   input:
     base_imposable_cps: 1000000
@@ -48,7 +48,7 @@
     cps_due: 10000
     cps_nette_due: 5000
     cps_a_reporter: 0
-- name: 6
+- name: 'CPS avec CPS à reverser et CPS en diminution (resultat débiteur)'
   period: 2022-05
   input:
     base_imposable_cps: 1000000
@@ -57,4 +57,24 @@
   output:
     cps_due: 10000
     cps_nette_due: 55000
+    cps_a_reporter: 0
+- name: 'CPS avec CPS à reverser et CPS en diminution (resultat null)'
+  period: 2024-03
+  input:
+    base_imposable_cps: 1000000
+    cps_a_reverser: 50000
+    cps_en_diminution: 5000
+  output:
+    cps_due: 0
+    cps_nette_due: 0
+    cps_a_reporter: 0
+- name: 'CPS supprimée'
+  period: 2023-10
+  input:
+    base_imposable_cps: 1000000
+    cps_a_reverser: 50000
+    cps_en_diminution: 5000
+  output:
+    cps_due: 0
+    cps_nette_due: 0
     cps_a_reporter: 0
