--- a/openfisca_pf/tests/dicp/impot_foncier/habitation_principale.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/habitation_principale.yaml
@@ -2,6 +2,7 @@
   period: 2023
   input:
     destination: NON_LOUE
+    type_local: HABITATION
     commune: PAPEETE
     valeur_venale: 15000000
   output:
@@ -14,10 +15,10 @@
     taux_archipel: 0.04
     valeur_locative_direct: 600000
     valeur_locative: 600000
-    premier_degrevement: 0.25
-    base_imposable_apres_premier_degrevement: 450000
-    second_degrevement_si_non_loue: 0
-    base_imposable_apres_second_degrevement: 450000
+    premier_abattement: 0.25
+    base_imposable_apres_premier_abattement: 450000
+    second_abattement_si_non_loue: 0
+    base_imposable_apres_second_abattement: 450000
     base_imposable: 450000
     contribution_fonciere_part_pays: 45000
     taux_part_pays: 0.1
