--- a/openfisca_pf/tests/dicp/impot_foncier/location_non_meuble.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/location_non_meuble.yaml
@@ -3,6 +3,7 @@
   period: 2023
   input:
     destination: LOUE
+    type_local: HABITATION
     commune: PAPEETE
     loyer_janvier: 380000
   output:
@@ -13,10 +14,10 @@
     villa_de_luxe: false
     valeur_locative_loyers: 4560000
     valeur_locative: 4560000
-    premier_degrevement: 0.25
-    base_imposable_apres_premier_degrevement: 3420000
-    second_degrevement_si_loue_non_meuble: 0.25
-    base_imposable_apres_second_degrevement: 2565000
+    premier_abattement: 0.25
+    base_imposable_apres_premier_abattement: 3420000
+    second_abattement_si_loue_non_meuble: 0.25
+    base_imposable_apres_second_abattement: 2565000
     base_imposable: 2565000
     contribution_fonciere_part_pays: 256500
     taux_part_pays: 0.1
