--- a/openfisca_pf/tests/dicp/impot_foncier/scenarios/habitation_principale.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/scenarios/habitation_principale.yaml
@@ -2,7 +2,7 @@
   period: 2023
   input:
     loue: false
-    commune: PAPEETE
+    commune_fiscale: PAPEETE
     valeur_venale: 15000000
   output:
     valeur_locative: 600000
