--- a/openfisca_pf/tests/dicp/impot_foncier/unitaires/local/taux.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/unitaires/local/taux.yaml
@@ -1,42 +1,42 @@
 - name: "Taux archipel Iles du vent Papeete"
   period: 2024
   input:
-    commune: PAPEETE
+    commune_fiscale: PAPEETE
   output:
     taux_archipel: 0.04
 - name: "Taux archipel Iles du vent Puna'auia"
   period: 2024
   input:
-    commune: PUNAAUIA
+    commune_fiscale: PUNAAUIA
   output:
     taux_archipel: 0.04
 - name: "Taux archipel Iles sous le vent"
   period: 2024
   input:
-    commune: UTUROA
+    commune_fiscale: UTUROA
   output:
     taux_archipel: 0.03
 - name: "Taux archipel Marquises"
   period: 2024
   input:
-    commune: NUKU_HIVA
+    commune_fiscale: NUKU_HIVA
   output:
     taux_archipel: 0.02
 - name: "Taux archipel Touamotus"
   period: 2024
   input:
-    commune: RANGIROA
+    commune_fiscale: RANGIROA
   output:
     taux_archipel: 0.02
 - name: "Taux archipel AUSTRALES"
   period: 2024
   input:
-    commune: RAIVAVAE
+    commune_fiscale: RAIVAVAE
   output:
     taux_archipel: 0.02
 - name: "Taux archipel GAMBIERS"
   period: 2024
   input:
-    commune: GAMBIER
+    commune_fiscale: GAMBIER
   output:
     taux_archipel: 0.02
