--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -81,5 +81,5 @@ jobs:
       uses: peter-evans/dockerhub-description@v3.3.0
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
         repository: "${{ env.repo }}"
