--- a/openfisca_pf/parameters/dicp/impot_foncier/taux/degrevement.yaml
+++ b/openfisca_pf/parameters/dicp/impot_foncier/taux/degrevement.yaml
@@ -1,5 +1,5 @@
 pour_baisse_de_revenus_loue_en_meuble_de_tourisme:
-  description: "Dégrèvement sur demande dans le cas d'une baisse de revenus d'un local loué en meublé de tourisme"
+  description: "Taux du dégrèvement sur demande dans le cas d'une baisse de revenus d'un local loué en meublé de tourisme"
   metadata:
     type: float
     unit: /1
