--- a/openfisca_pf/tests/dicp/impot_foncier/scenarios/habitation_principale.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/scenarios/habitation_principale.yaml
@@ -6,6 +6,9 @@
     valeur_venale: 15000000
   output:
     valeur_locative: 600000
+    premier_abattement: 150000
+    base_imposable_apres_premier_abattement: 450000
+    second_abattement: 0
     base_imposable: 450000
     contribution_fonciere_part_pays: 45000
     contribution_fonciere_part_commune: 22500
