--- a/openfisca_pf/tests/dicp/impot_foncier/scenarios/location_meuble.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/scenarios/location_meuble.yaml
@@ -7,6 +7,9 @@
     loyer_janvier: 380000
   output:
     valeur_locative: 4560000
+    premier_abattement: 1140000
+    base_imposable_apres_premier_abattement: 3420000
+    second_abattement: 1026000
     base_imposable: 2394000
     contribution_fonciere_part_pays: 239400
     contribution_fonciere_part_commune: 119700
